--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>The Special 1s' Project Idea</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,111 +21,49 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Group 1: The Special 1s</h1>
+							<p>Members: Akash, Edmund, Jason, Jamarl, Oliver</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link"><span class="icon fa-home">Team Profile</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Project Description</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon fa-user">Skills & Jobs</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon fa-angellist">Timeframe</span></a></li>
 							</ul>
 						</nav>
 
 				</div>
-
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-
-				</div>
-
 			</div>
 
 		<!-- Main -->
 			<div id="main">
 
-				<!-- Intro -->
-					<section id="top" class="one dark cover">
+				<!-- Team Profile -->
+					<section id="top" class="three">
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2> Welcome to "The Special 1s" website!</h2>
+								<p> To get more information about the section, please click on the pictures above the placeholder.</p>
 							</header>
-
-							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
-							</footer>
-
-						</div>
-					</section>
-
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
-						<div class="container">
-
-							<header>
-								<h2>Portfolio</h2>
-							</header>
-
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Personal Info</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Career Plan</h3>
 										</header>
 									</article>
 								</div>
@@ -134,12 +72,88 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
+				<!-- Project Description -->
+					<section id="portfolio" class="two">
+						<div class="container">
+
+							<header>
+								<h2>Project Description</h2>
+							</header>
+
+							<p> </p>
+
+							<div class="row">
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Overview</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Roles</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Testing</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Aim</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Scope & Limits</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Risk</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Plans & Progress</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Tools & Technologies</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Skills & Jobs</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+
+						</div>
+					</section>
+				
+				<!-- Group Process & Comm -->
 					<section id="about" class="three">
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Group of Processes and Communication</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
@@ -154,31 +168,18 @@
 						</div>
 					</section>
 
-				<!-- Contact -->
+				<!-- Timeframe -->
 					<section id="contact" class="four">
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Timeframe</h2>
 							</header>
 
 							<p>Elementum sem parturient nulla quam placerat viverra
 							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
 							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
 							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
 
 						</div>
 					</section>
