--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="personalinfo.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Personal Info</h3>
 										</header>
@@ -61,7 +61,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="careerplans.htmll" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Career Plan</h3>
 										</header>
@@ -91,13 +91,13 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="roles.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Roles</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="testing.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Testing</h3>
 										</header>
@@ -105,19 +105,19 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="aims.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Aim</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="scopeandlimits.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Scope & Limits</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="risk.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Risk</h3>
 										</header>
@@ -125,19 +125,19 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="plansandprogress.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Plans & Progress</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="toolsandtechnologies.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Tools & Technologies</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="skillsandjobs.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Skills & Jobs</h3>
 										</header>
@@ -158,12 +158,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>  </p>
 
 						</div>
 					</section>
@@ -175,11 +170,10 @@
 							<header>
 								<h2>Timeframe</h2>
 							</header>
+							
+							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<p>  </p>
 
 						</div>
 					</section>
