--- a/risk.html
+++ b/risk.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Testing by HTML5 UP
+	Risks by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -43,8 +43,8 @@
 
 
 	  
-<!-- Testing -->
-	<div class="Testing">
+<!-- Risks -->
+	<div class="Risks">
 		<div class="container">
 			<div class="col-md-8 single-left">
 				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
@@ -63,7 +63,7 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-<!-- //Testing -->
+<!-- //Risks -->
 		
 		
 		
