--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<span class="image avatar48"><img src="images/logo.png" alt="" /></span>
 							<h1 id="title">Group 1: The Special 1s</h1>
 							<p>Members: Akash, Edmund, Jason, Jamarl, Oliver</p>
 						</div>
