--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 							<header>
 								<h2>Group of Processes and Communication</h2>
 							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							
+							<span class="image main"><img src="images/pic08.jpg" alt="" /></span>
 
 							<p>  </p>
 
