--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
 										</header>
 									</article>
 								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="groupreflection.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<header>
+											<h3>Group Reflection</h3>
+										</header>
+									</article>
+								</div>
 							</div>
 
 						</div>
@@ -171,7 +179,7 @@
 								<h2>Timeframe</h2>
 							</header>
 							
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<span class="image main"><img src="images/pic08.jpg" alt="" /></span>
 
 							<p>  </p>
 
