Update and rename teamprofile.html to groupreflection.html

--- a/groupreflection.html
+++ b/groupreflection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Team Profile by HTML5 UP
+	Group Reflection by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -43,8 +43,8 @@
 
 
 	  
-<!-- Team Profile -->
-	<div class="Team Profile">
+<!-- Group Reflection -->
+	<div class="Group Reflection">
 		<div class="container">
 			<div class="col-md-8 single-left">
 				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
@@ -63,7 +63,7 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-<!-- //Team Profile -->
+<!-- //Group Reflection -->
 		
 		
 		
