--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="careerplans.htmll" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="careerplans.htmll" class="image fit"><img src="images/careerplan.jpg" alt="" /></a>
 										<header>
 											<h3>Career Plan</h3>
 										</header>
@@ -69,7 +69,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="groupreflection.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="groupreflection.html" class="image fit"><img src="images/groupreflection.jpg" alt="" /></a>
 										<header>
 											<h3>Group Reflection</h3>
 										</header>
@@ -93,19 +93,19 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="overview.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="overview.html" class="image fit"><img src="images/Overview.png" alt="" /></a>
 										<header>
 											<h3>Overview</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="roles.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="roles.html" class="image fit"><img src="images/roles.png" alt="" /></a>
 										<header>
 											<h3>Roles</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="testing.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="testing.html" class="image fit"><img src="images/testing.jpg" alt="" /></a>
 										<header>
 											<h3>Testing</h3>
 										</header>
@@ -113,19 +113,19 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="aims.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="aims.html" class="image fit"><img src="images/aims.png" alt="" /></a>
 										<header>
 											<h3>Aim</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="scopeandlimits.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="scopeandlimits.html" class="image fit"><img src="images/limits.jpg" alt="" /></a>
 										<header>
 											<h3>Scope & Limits</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="risk.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="risk.html" class="image fit"><img src="images/risk.jpg" alt="" /></a>
 										<header>
 											<h3>Risk</h3>
 										</header>
@@ -133,19 +133,19 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="plansandprogress.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="plansandprogress.html" class="image fit"><img src="images/plans.jpg" alt="" /></a>
 										<header>
 											<h3>Plans & Progress</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="toolsandtechnologies.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="toolsandtechnologies.html" class="image fit"><img src="images/toolsandtechs.jpg" alt="" /></a>
 										<header>
 											<h3>Tools & Technologies</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="skillsandjobs.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="skillsandjobs.html" class="image fit"><img src="images/skills.jpg" alt="" /></a>
 										<header>
 											<h3>Skills & Jobs</h3>
 										</header>
