--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<article class="item">
 										<a href="personalinfo.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
-											<h3>Personal Info</h3>
+											<h3>><a href="personalinfo.html"> Personal Information </a></h3>
 										</header>
 									</article>
 								</div>
@@ -63,7 +63,7 @@
 									<article class="item">
 										<a href="careerplans.htmll" class="image fit"><img src="images/careerplan.jpg" alt="" /></a>
 										<header>
-											<h3>Career Plan</h3>
+											<h3><a href="careerplans.html"> Career Plan </a></h3>
 										</header>
 									</article>
 								</div>
@@ -71,7 +71,7 @@
 									<article class="item">
 										<a href="groupreflection.html" class="image fit"><img src="images/groupreflection.jpg" alt="" /></a>
 										<header>
-											<h3>Group Reflection</h3>
+											<h3><a href="groupreflection.html"> Group Reflection </a></h3>
 										</header>
 									</article>
 								</div>
@@ -95,19 +95,19 @@
 									<article class="item">
 										<a href="overview.html" class="image fit"><img src="images/Overview.png" alt="" /></a>
 										<header>
-											<h3>Overview</h3>
+											<h3><a href="overview.html"> Overview </a>/h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="roles.html" class="image fit"><img src="images/roles.png" alt="" /></a>
 										<header>
-											<h3>Roles</h3>
+											<h3><a href="roles.html"> Roles </a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="testing.html" class="image fit"><img src="images/testing.jpg" alt="" /></a>
 										<header>
-											<h3>Testing</h3>
+											<h3><a href="testing.html"> Testing </a></h3>
 										</header>
 									</article>
 								</div>
@@ -115,19 +115,19 @@
 									<article class="item">
 										<a href="aims.html" class="image fit"><img src="images/aims.png" alt="" /></a>
 										<header>
-											<h3>Aim</h3>
+											<h3><a href="aims.html"> Aim </a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="scopeandlimits.html" class="image fit"><img src="images/limits.jpg" alt="" /></a>
 										<header>
-											<h3>Scope & Limits</h3>
+											<h3><a href="scopeandlimits.html"> Scope & Limits</a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="risk.html" class="image fit"><img src="images/risk.jpg" alt="" /></a>
 										<header>
-											<h3>Risk</h3>
+											<h3><a href="risk.html"> Risk </a></h3>
 										</header>
 									</article>
 								</div>
@@ -135,19 +135,19 @@
 									<article class="item">
 										<a href="plansandprogress.html" class="image fit"><img src="images/plans.jpg" alt="" /></a>
 										<header>
-											<h3>Plans & Progress</h3>
+											<h3><a href="plansandprogress.html"> Plans & Progress </a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="toolsandtechnologies.html" class="image fit"><img src="images/toolsandtechs.jpg" alt="" /></a>
 										<header>
-											<h3>Tools & Technologies</h3>
+											<h3><a href="toolsandtechnologies.html"> Tools & Technologies </a></h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="skillsandjobs.html" class="image fit"><img src="images/skills.jpg" alt="" /></a>
 										<header>
-											<h3>Skills & Jobs</h3>
+											<h3><a href="skillsandjobs.html"> Skills & Jobs </a></h3>
 										</header>
 									</article>
 								</div>
