--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="personalinfo.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="personalinfo.html" class="image fit"><img src="images/personal.png" alt="" /></a>
 										<header>
 											<h3>><a href="personalinfo.html"> Personal Information </a></h3>
 										</header>
