--- a/scopeandlimits.html
+++ b/scopeandlimits.html
@@ -47,7 +47,7 @@
 	<div class="Scope and Limits">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/limits.jpg" alt="" /></a>
                                 <div class="single-left2">
 					<h3> Scope and Limits </h3>
 				</div>
