--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 									<article class="item">
 										<a href="personalinfo.html" class="image fit"><img src="images/personal.png" alt="" /></a>
 										<header>
-											<h3>><a href="personalinfo.html"> Personal Information </a></h3>
+											<h3><a href="personalinfo.html">  Personal Information </a></h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="careerplans.htmll" class="image fit"><img src="images/careerplan.jpg" alt="" /></a>
+										<a href="careerplans.html" class="image fit"><img src="images/careerplan.jpg" alt="" /></a>
 										<header>
 											<h3><a href="careerplans.html"> Career Plan </a></h3>
 										</header>
@@ -88,14 +88,12 @@
 								<h2>Project Description</h2>
 							</header>
 
-							<p> </p>
-
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="overview.html" class="image fit"><img src="images/Overview.png" alt="" /></a>
 										<header>
-											<h3><a href="overview.html"> Overview </a>/h3>
+											<h3><a href="overview.html"> Overview </a></h3>
 										</header>
 									</article>
 									<article class="item">
