--- a/toolsandtechnologies.html
+++ b/toolsandtechnologies.html
@@ -47,7 +47,7 @@
 	<div class="Tools and Technologies">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/toolsandtechs.jpg" alt="" /></a>
                                 <div class="single-left2">
 					<h3> Tools and Technologies </h3>
 				</div>
