--- a/testing.html
+++ b/testing.html
@@ -47,7 +47,7 @@
 	<div class="Testing">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/testing.jpg" alt="" /></a>
                                 <div class="single-left2">
 					<h3> Testing </h3>
 				</div>
