--- a/skillsandjobs.html
+++ b/skillsandjobs.html
@@ -47,7 +47,7 @@
 	<div class="Skills and Jobs">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/skills.jpg" alt="" /></a>
                                 <div class="single-left2">
 					<h3> Skills and Jobs </h3>
 				</div>
