--- a/plansandprogress.html
+++ b/plansandprogress.html
@@ -47,7 +47,7 @@
 	<div class="Plans and Progress">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/plans.jpg" alt="" /></a>
                                 <div class="single-left2">
 					<h3> Plans and Progress </h3>
 				</div>
