--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 							<span class="image main"><img src="images/pic08.jpg" alt="" /></span>
 
 							<p>  </p>
+							<p>  </p>
 
 						</div>
 					</section>
@@ -177,7 +178,7 @@
 								<h2>Timeframe</h2>
 							</header>
 							
-							<span class="image main"><img src="images/pic08.jpg" alt="" /></span>
+							<span class="image main"><img src="images/timeframe.jpg" alt="" /></span>
 
 							<p>  </p>
 
