--- a/overview.html
+++ b/overview.html
@@ -47,7 +47,7 @@
 	<div class="Overview">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<a href="#" class="image fit"><img src="images/2.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/Overview.png" alt=""width="200" height="150" /></a>
                                 <div class="single-left2">
 					<h3> Overview </h3>
 				</div>
