--- a/aims.html
+++ b/aims.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/logo.png" alt="" /></span>
+							<span class="image avatar48"><img src="images/logo.png" alt=""width="200" height="250" /></span>
 							<h1 id="title">The Special 1s</h1>
 							<p>Members are Akash, Edmund, Jason, Jamarl, Oliver</p>
 						</div>
