--- a/index.html
+++ b/index.html
@@ -178,10 +178,9 @@
 								<h2>Timeframe</h2>
 							</header>
 							
-							<span class="image main"><img src="images/timeframe.jpg" alt="" /></span>
-
 							<p>  </p>
-
+							<span class="image main"><img src="images/timeframe??.jpg" alt="" /></span>
+							
 						</div>
 					</section>
 
