--- a/groupreflection.html
+++ b/groupreflection.html
@@ -47,21 +47,21 @@
 	<div class="Group Reflection">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<span class="image main"><img src="images/groupreflection.jpg" alt="" /></span>
+				<span class="image main"><img src="images/groupreflection.jpg" alt="" width="200" height="250"/></span>
                                 <div class="single-left2">
 					<h3> Group Reflection </h3>
 				</div>
 				<div class="single-left3">
 					
-					<h3> Akash </h3>
+					<h1> Akash </h1>
 				<p>  </p>
-          				<h3> Edmund </h3>
+          				<h1> Edmund </h1>
 				<p>  </p>
-					<h3> Jason </h3>
+					<h1> Jason </h1>
 				<p>  </p>
-					<h3> Jamarl </h3>
+					<h1> Jamarl </h1>
 				<p>  </p>
-					<h3> Oliver </h3>
+					<h1> Oliver </h1>
 				<p>  </p>
 					
 				<p> for overall </p>        
