--- a/personalinfo.html
+++ b/personalinfo.html
@@ -56,7 +56,16 @@
 					<h1> Akash </h1>
 				<p>  </p>
           				<h1> Edmund </h1>
-				<p>  </p>
+				<p> 	My name is Edmund Tan, currently 18 years old and “Life is short so go big, so wild and eat” </br> 
+					is the wisest philosophy I ever thought of in my entire life but it changed to “Diamonds form under pressure”</br> 
+					after experiencing University. My hobbies are playing badminton and card games with my friends.</br>  
+					I came from Malaysia to study Bachelor of Technology in RMIT and this is my student number, s3698291.</br> 
+					After 12 weeks of learning in university, I am fairly proficient in GitHub and eclipse now.</br> 
+					Other than that, I know the basics of Java language in programming.</br> 
+					I can also make application prototypes using invision and proto.io. As for my interest in IT, I would say that</br> 
+					I’m interested In learning cloud computing and robotics because they are both interesting and have the potential</br> 
+					to contribute to society.
+				</p>
 					<h1> Jason </h1>
 				<p>  </p>
 					<h1> Jamarl </h1>
