--- a/testing.html
+++ b/testing.html
@@ -28,10 +28,10 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon fa-home">Team Profile</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon fa-th">Project Description</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon fa-user">Skills & Jobs</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon fa-angellist">Timeframe</span></a></li>
+								<li><a href="#top" id="top-link"><a href="index.html"><span class="icon fa-home">Team Profile</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><a href="index.html"><span class="icon fa-th">Project Description</span></a></li>
+								<li><a href="#about" id="about-link"><a href="index.html"><span class="icon fa-user">Skills & Jobs</span></a></li>
+								<li><a href="#contact" id="contact-link"><a href="index.html"><span class="icon fa-angellist">Timeframe</span></a></li>
 </ul>
 						</nav>
 				</div>
