--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="timframe.html" class="image fit"><img src="images/timeframe.jpg" alt="" /></a>
+										<a href="timframe.html" class="image fit"><img src="images/timeframe.png" alt="" /></a>
 										<header>
 											<h3><a href="timeframe.html">  Timeframe </a></h3>
 										</header>
