--- a/testresult.html
+++ b/testresult.html
@@ -43,19 +43,19 @@
 
 
 	  
-<!-- Timeframe -->
-	<div class="Timeframe">
+<!-- Test Result -->
+	<div class="Test Result">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<span class="image main"><img src="images/timeframe.png" alt=""width="200" height="250" /></span>
+				<span class="image main"><img src="images/testgroup.png" alt=""width="200" height="250" /></span>
                                 <div class="single-left2">
-					<h3> Timeframe </h3>
+					<h3> Test Result </h3>
 				</div>
 				<div class="single-left3">
 					
 					<h1> Akash </h1>
 				<p>  </p>
-          <h1> Edmund </h1>
+          				<h1> Edmund </h1>
 				<p>  </p>
 					<h1> Jason </h1>
 				<p>  </p>
@@ -71,7 +71,7 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-<!-- //Timeframe -->
+<!-- //Test Result -->
 		
 		
 		
