--- a/testresult.html
+++ b/testresult.html
@@ -47,7 +47,7 @@
 	<div class="Test Result">
 		<div class="container">
 			<div class="col-md-8 single-left">
-				<span class="image main"><img src="images/testgroup.png" alt=""width="200" height="250" /></span>
+				<span class="image main"><img src="images/testgroup.jpg" alt=""width="200" height="250" /></span>
                                 <div class="single-left2">
 					<h3> Test Result </h3>
 				</div>
